--- a/iOS_Static_Library/c_api/CMakeLists.txt
+++ b/iOS_Static_Library/c_api/CMakeLists.txt
@@ -3,6 +3,7 @@ target_include_directories(c_api_deps PRIVATE
                            ${CMAKE_CURRENT_SOURCE_DIR}
                            )
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 
 add_library(api OBJECT api.cpp)
 target_link_libraries(api PRIVATE c_api_deps)
